--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,14 +2,14 @@
 FROM python:3.12-slim
 
 # Set working directory
-WORKDIR /app
+WORKDIR /app/backend
 
 # Copy requirements.txt file and install dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY ./requirements.txt /app/backend/requirements.txt
+RUN pip install -r requirements.txt
 
-# Copy the rest of the application
-COPY . .
+# # Copy the rest of the application
+# COPY . .
 
 # Command to run the FastAPI app using Uvicorn
 CMD ["uvicorn", "src.app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
