--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,10 +2,10 @@
 FROM node:18-alpine
 
 # Set working directory
-WORKDIR /app/frontend
+WORKDIR /app
 
 # Copy package.json and yarn.lock
-COPY ./package.json /app/frontend
+COPY  package.json package-lock.json ./
 
 # Install dependencies
 RUN npm i
