--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,20 +14,22 @@ services:
       - DATABASE_URL=postgresql://postgres:password@db/magic_db
 
   db:
-      image: postgres:latest
-      environment:
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: password
-        POSTGRES_DB: magic_db
-      volumes:
-        - pgdb:/var/lib/postgresql/data/
-      ports:
-        - "5432:5432"
-      healthcheck:
-        test: ["CMD", "pg_isready", "-U", "postgres"]
-        interval: 30s
-        timeout: 10s
-        retries: 5
+    image: postgres:latest
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: magic_db
+    volumes:
+      - pgdb:/var/lib/postgresql/data/
+    ports:
+      - 5432:5432
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "postgres"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    networks:
+      - testing-network
 
   frontend:
     build: frontend
