--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - ./backend:/app/backend
+      - ./backend:/backend
     depends_on:
       - ollama
       - db
@@ -36,7 +36,7 @@ services:
     ports:
       - 5173:5173
     volumes:
-      - ./frontend:/app/frontend
+      - ./frontend:/frontend
     depends_on:
       - backend
     networks:
@@ -58,5 +58,4 @@ networks:
 
 volumes:
   test-vol:
-    driver: local
   pgdb:
